Fix: fixed a small issue in overflow scroll

--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow: scroll;
 }
 *{
     box-sizing: border-box;
