--- a/src/css/index.css
+++ b/src/css/index.css
@@ -21,5 +21,6 @@ body {
   margin: 0;
   height:100vh;
   background-color: var(--secondary);
+  overflow: auto !important;
 }
 
